# yios

./: .gdbinit  Makefile.am  Makefile.in  README.md  acinclude.m4  aclocal.m4  configure  configure.ac
autom4te.cache/: output.0  requests  traces.0
boot/: Makefile.am  Makefile.in
boot/arm/: Makefile.am  Makefile.in  boot.S
boot/i386/: Makefile.am  Makefile.in  boot.S
config.tp/: arm.conf  i386.conf
docs/demosite/: index.html
docs/demosite/v86/: libv86.js  v86_all.js
driver/: Makefile.am  Makefile.in
driver/i386/: nkb.c  pc_com.c  ps2mou.c  ps2mou.old.c
gui/: Makefile.am  Makefile.in
gui/mw/demos/: test.c
gui/mw/demos/nanox/: ntetris.c  ntetris.h
gui/mw/drivers/: mou_ps2.c  scr_svga.c
gui/mw/fonts/: X6x13.c
gui/mw/include/: mwsystem.h  mwtypes.h  nxdraw.h  swap.h  windef.h
gui/mw/nanox/: serv.h  srvmain.c
gui/mw/stdinc/: assert.h  ctype.h  fcntl.h  mwcfg.h  signal.h  stdarg.h  stdinc.c  stdio.h  stdlib.h  stdsup.c  string.h  unistd.h
gui/mw/stdinc/sys/: mman.h  stat.h  time.h  types.h
hal/: Makefile.am  Makefile.in
hal/i386/: .gdbinit  Makefile.am  Makefile.in  oskernel.lds
hal/i386/debug/: Makefile.am  Makefile.in  dbg.c  fnt.S  gdbstub.c  novel-big.txt  novel.txt  vbe.c  vbe32.c
hal/i386/init/: Makefile.am  Makefile.in  decom.c  init16.S  init32.S  init32.lds  start32.S  stub16.S  vesa16.S
hal/i386/mm/: Makefile.am  Makefile.in  mem.c
hal/i386/process/: Makefile.am  Makefile.in  int.c  syscall.c  time.c
include/yios/: atom.h  config.h.in  config.h.in~  dbg.h  driver.h  errno.h  file.h  int.h  irql.h  limits.h  list.h  lock.h  memory.h  mmzone.h  page.h  param.h  sched.h  sched_rm.h  sched_ts.h  sem.h  smp.h  stat.h  thread.h  time.h  types.h  version.h
include/yios/hal-i386/: atom.h  bitopt.h  boot.h  compiler.h  cpu.h  e820.h  errno.h  init.h  int.h  io.h  ioctl.h  ioctls.h  memory.h  pageset.h  segset.h  socket.h  time.h  types.h  unistd.h
include/yios/rtl/: rtl.h
kernel/: Makefile.am  Makefile.in  demo.c  fs.c  int.c  main.c  sched.c  sched_rm.c  sched_ts.c  sem.c  thread.c  timer.c
kernel/rtl/: printk.c  string.c
mm/: Makefile.am  Makefile.in  mem.c  mmzone.c  page.c
tools/: Makefile.am  Makefile.in  a  binit32.c  bkernel.c
